--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "http-auth": "^2.2.8",
     "jade": "^1.11.0",
-    "pg": "^4.4.3",
+    "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.15.1"
+    "pug": "^2.0.0-rc.4",
+    "sequelize": "^4.33.4"
   }
 }
