--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-auth": "^3.2.3",
-    "pug": "^2.0.0-rc.4",
-    "pg": "^7.4.1",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^4.33.4"
+    "http-auth": "^3.2.4",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "pug": "^2.0.4",
+    "sequelize": "^4.44.4"
   }
 }
